--- a/GeniusInvokationAutoToy/Nlog.config
+++ b/GeniusInvokationAutoToy/Nlog.config
@@ -6,11 +6,21 @@
 	<targets>
 		<target xsi:type="RichTextBox"
 		        name="richTextBoxLog"
-		        layout="${longdate}|${level:uppercase=true}|${message}"
+		        layout="${time}|${level:uppercase=true}|${message}"
 		        controlName="rtbConsole"
-		        formName="FormMain">
+		        formName="FormMain"
+		        useDefaultRowColoringRules="true"
+		        supportLinks="true">
+
+
+			<!--
+			<word-coloring text="Warn" fontColor ="Orange"/>
+			<word-coloring text="Error" fontColor ="Red"/>
+			-->
+
 		</target>
-		<target name="logfile" xsi:type="File" fileName="${basedir}/logs/genius-invokation-auto-toy-${date:format=yyyyMMdd}.txt" />
+		<target name="logfile" xsi:type="File"
+		        fileName="${basedir}/logs/genius-invokation-auto-toy-${date:format=yyyyMMdd}.txt" />
 	</targets>
 	<rules>
 		<logger name="*" minlevel="Debug" writeTo="richTextBoxLog" />
