feat: 记住用户设置

--- a/GeniusInvokationAutoToy/App.config
+++ b/GeniusInvokationAutoToy/App.config
@@ -22,29 +22,14 @@
   </runtime>
   <userSettings>
     <GeniusInvokationAutoToy.Properties.Settings>
-      <setting name="StrainBarAreaLocation" serializeAs="String">
-        <value>0, 0</value>
-      </setting>
-      <setting name="StrainBarAreaSize" serializeAs="String">
-        <value>599, 50</value>
-      </setting>
-      <setting name="FormMainLocation" serializeAs="String">
-        <value>100, 100</value>
-      </setting>
       <setting name="TopMostChecked" serializeAs="String">
         <value>False</value>
       </setting>
-      <setting name="FrameRate" serializeAs="String">
-        <value>30</value>
+      <setting name="CboStrategySelectIndex" serializeAs="String">
+        <value>0</value>
       </setting>
-      <setting name="AutoPullUpChecked" serializeAs="String">
-        <value>True</value>
-      </setting>
-      <setting name="DisplayDetectChecked" serializeAs="String">
-        <value>False</value>
-      </setting>
-      <setting name="AlwaysHideAreaChecked" serializeAs="String">
-        <value>False</value>
+      <setting name="CboGameResolutionSelectIndex" serializeAs="String">
+        <value>0</value>
       </setting>
     </GeniusInvokationAutoToy.Properties.Settings>
   </userSettings>
