feat: 自定义策略完成

--- a/GeniusInvokationAutoToy/GeniusInvokationAutoToy.csproj
+++ b/GeniusInvokationAutoToy/GeniusInvokationAutoToy.csproj
@@ -125,7 +125,10 @@
     <Compile Include="Core\ImageCapture.cs" />
     <Compile Include="Strategy\BaseStrategy.cs" />
     <Compile Include="Core\GameControl.cs" />
+    <Compile Include="Strategy\CustomStrategy.cs" />
     <Compile Include="Strategy\KeqingRaidenGanyuStrategy.cs" />
+    <Compile Include="Strategy\Model\ActionCommand.cs" />
+    <Compile Include="Strategy\Model\ActionEnum.cs" />
     <Compile Include="Strategy\Model\Character.cs" />
     <Compile Include="Strategy\Model\Duel.cs" />
     <Compile Include="Strategy\Model\RoundStrategy.cs" />
