feat: 添加当前出战角色的判定，解决角色被动切换时遇到的问题 #2
添加无法行动（冻结、眩晕）的判定，直接结束游戏

--- a/GeniusInvokationAutoToy/GeniusInvokationAutoToy.csproj
+++ b/GeniusInvokationAutoToy/GeniusInvokationAutoToy.csproj
@@ -130,7 +130,9 @@
     <Compile Include="Strategy\Model\ActionCommand.cs" />
     <Compile Include="Strategy\Model\ActionEnum.cs" />
     <Compile Include="Strategy\Model\Character.cs" />
+    <Compile Include="Strategy\Model\CharacterStatusEnum.cs" />
     <Compile Include="Strategy\Model\Duel.cs" />
+    <Compile Include="Strategy\Model\Old\CurrentCharacterStatus.cs" />
     <Compile Include="Strategy\Model\RoundStrategy.cs" />
     <Compile Include="Strategy\Model\Skill.cs" />
     <Compile Include="Strategy\MonaSucroseJeanStrategy.cs" />
